// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApproveCancel it allows a user to approve a proposal 1`] = `
.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
  pointer-events: none;
  color: var(--gray-medium);
  border-color: var(--gray-medium);
  background: transparent;
}

.c17 svg path {
  stroke: var(--black);
}

.c17:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c17:hover svg path {
  stroke: var(--purple-medium);
}

.c17:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c17:active svg path {
  stroke: var(--white) !important;
}

.c17 svg path {
  stroke: var(--gray-medium);
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
  pointer-events: none;
  color: var(--gray-medium);
  border-color: var(--gray-medium);
  background: transparent;
}

.c18 svg path {
  stroke: var(--black);
}

.c18:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c18:hover svg path {
  stroke: var(--purple-medium);
}

.c18:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c18:active svg path {
  stroke: var(--white) !important;
}

.c18 svg path {
  stroke: var(--white);
}

.c18:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c18:hover svg path {
  stroke: var(--green-medium);
}

.c18 svg path {
  stroke: var(--gray-medium);
}

.c11 {
  vertical-align: middle;
}

.c1 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c1 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c1 > h2:first-child {
  margin: 0;
}

.c1 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c2 {
  background-color: var(--blue-gray);
}

.c2 hr {
  border-color: var(--gray-medium);
}

.c4 {
  background-color: var(--white);
  box-shadow: 0 0 0.5em var(--gray-light);
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  margin: 1.5em 0;
}

.c16 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  position: relative;
  display: inline-block;
  background-color: var(--purple-medium);
  width: 3em;
  height: 3em;
  margin: 0;
}

.c3:after {
  position: absolute;
  display: block;
  content: '';
  top: 0;
  left: 0;
  background-color: var(--purple-dark);
  -webkit-animation-name: gxoozo;
  animation-name: gxoozo;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  width: calc(3em * 0.5);
  height: calc(3em * 0.5);
}

.c8 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c8 p {
  margin: 0;
  line-height: 1.5;
}

.c10 {
  position: relative;
  cursor: pointer;
}

.c10 svg {
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c10 .copy-text {
  position: absolute;
  top: calc(50%);
  left: calc(100%);
  padding-left: 0.5em;
  color: var(--purple-medium);
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  pointer-events: none;
  white-space: nowrap;
}

.c10:hover svg {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c10:hover .copy-text {
  opacity: 1;
  pointer-events: all;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.35em;
  line-height: 1.5;
}

.c9 > a {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 > a:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 > a svg {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c9 > a svg:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  fill: var(--purple-medium);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c5 > p,
.c5 > hr {
  margin: 0.5em 0;
}

.c5 > p[role='button'] {
  margin: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1em;
  line-height: 2.5em;
  text-align: left;
  padding-left: 0em;
}

.c7 > div:first-child {
  -webkit-flex: 0 1 25%;
  -ms-flex: 0 1 25%;
  flex: 0 1 25%;
  min-width: 200px;
  text-transform: capitalize;
}

.c7 > div:last-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75em;
  word-break: break-word;
}

.c7 > div:last-child > p[role='button'] {
  margin: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
  width: 100%;
  margin: 0 auto;
  max-width: 40em;
}

.c0 form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  pointer-events: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 65%;
  -ms-flex: 0 0 65%;
  flex: 0 0 65%;
}

.c12 span.info,
.c12 span.error {
  font-size: 0.875rem;
}

.c12 span.error {
  color: var(--red-medium);
}

.c13 .toggle-wrapper {
  position: relative;
}

.c13 input {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 0;
  height: 0;
  opacity: 0;
}

.c13 .toggle {
  display: inline-block;
  position: relative;
  width: 2.25em;
  height: 1.5em;
  border-radius: 0.75em;
  border: 2px solid var(--blue-medium);
  background-color: var(--blue-medium);
  border-color: var(--gray-light) !important;
  background-color: var(--gray-light) !important;
}

.c13 .toggle::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: calc(1.5em - 4px);
  height: calc(1.5em - 4px);
  border-radius: 50%;
  background-color: var(--white);
}

.c13 input:checked ~ .toggle {
  border-color: var(--blue-dark);
  background-color: var(--blue-dark);
}

.c13 input:checked ~ .toggle::after {
  left: auto;
  right: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: var(--space-l);
}

.c6 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c6 > *:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c14 span {
  color: var(--purple-medium);
  font-size: 1.75rem;
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 c2"
    >
      <h2>
        Approve Safe Proposal
      </h2>
      <hr />
      <p>
        Sending your transaction...
      </p>
      <span
        class="c3"
      />
    </div>
    
    <div
      class="c1 c4"
    >
      <div
        class="c5"
      >
        <header
          class="c6"
        >
          <div>
            <span>
              From
            </span>
            <span>
              t1z225 ... 6z6wgi
            </span>
          </div>
          <div>
            <span>
              Signer 
              Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
          <div>
            <span>
              Safe Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
        </header>
        <div
          class="c7"
        >
          <div>
            Proposal ID
          </div>
          <div>
            2
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Proposer
          </div>
          <div>
            <div
              class="c8"
            >
              <div
                class="c9"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1z225 ... 6z6wgi
                </a>
                <span
                  class="c10"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c11"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Approvers (1)
          </div>
          <div>
            <div
              class="c8"
            >
              <div
                class="c9"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1z225 ... 6z6wgi
                </a>
                <span
                  class="c10"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c11"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Approvals until execution
          </div>
          <div>
            1
          </div>
        </div>
        <hr />
        <div
          class="c7"
        >
          <div>
            To
          </div>
          <div>
            <div
              class="c8"
            >
              <div
                class="c9"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1mbk7 ... icb2uq
                </a>
                <span
                  class="c10"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c11"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Method
          </div>
          <div>
            Send
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Value
          </div>
          <div>
            0.4
             FIL
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Params
          </div>
          <div>
            –
          </div>
        </div>
        <hr />
        <label
          class="c12 c13"
          disabled=""
        >
          <div>
            <span>
              Expert Mode
            </span>
            
          </div>
          <div
            class="toggle-wrapper"
          >
            <input
              disabled=""
              type="checkbox"
            />
            <span
              class="toggle"
            />
          </div>
        </label>
        <p>
          You will not pay more than 
          0.00000000001
           FIL for this transaction.
           
          <a
            href="https://filfox.info/en/stats/gas"
            rel="noreferrer noopener"
            target="_blank"
          >
            More information on average gas fee statistics.
          </a>
        </p>
        <hr />
        <div
          class="c14"
        >
          <span>
            Total
          </span>
          <span>
            0.00000000001
             FIL
          </span>
        </div>
      </div>
    </div>
    <div
      class="c15 c16"
    >
      <button
        class="c17"
        disabled=""
        type="button"
      >
        Back
      </button>
      <button
        class="c18"
        disabled=""
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`ApproveCancel it allows a user to cancel a proposal 1`] = `
.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
  pointer-events: none;
  color: var(--gray-medium);
  border-color: var(--gray-medium);
  background: transparent;
}

.c17 svg path {
  stroke: var(--black);
}

.c17:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c17:hover svg path {
  stroke: var(--purple-medium);
}

.c17:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c17:active svg path {
  stroke: var(--white) !important;
}

.c17 svg path {
  stroke: var(--gray-medium);
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
  pointer-events: none;
  color: var(--gray-medium);
  border-color: var(--gray-medium);
  background: transparent;
}

.c18 svg path {
  stroke: var(--black);
}

.c18:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c18:hover svg path {
  stroke: var(--purple-medium);
}

.c18:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c18:active svg path {
  stroke: var(--white) !important;
}

.c18 svg path {
  stroke: var(--white);
}

.c18:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c18:hover svg path {
  stroke: var(--green-medium);
}

.c18 svg path {
  stroke: var(--gray-medium);
}

.c11 {
  vertical-align: middle;
}

.c1 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c1 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c1 > h2:first-child {
  margin: 0;
}

.c1 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c2 {
  background-color: var(--blue-gray);
}

.c2 hr {
  border-color: var(--gray-medium);
}

.c4 {
  background-color: var(--white);
  box-shadow: 0 0 0.5em var(--gray-light);
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  margin: 1.5em 0;
}

.c16 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  position: relative;
  display: inline-block;
  background-color: var(--purple-medium);
  width: 3em;
  height: 3em;
  margin: 0;
}

.c3:after {
  position: absolute;
  display: block;
  content: '';
  top: 0;
  left: 0;
  background-color: var(--purple-dark);
  -webkit-animation-name: gxoozo;
  animation-name: gxoozo;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  width: calc(3em * 0.5);
  height: calc(3em * 0.5);
}

.c8 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c8 p {
  margin: 0;
  line-height: 1.5;
}

.c10 {
  position: relative;
  cursor: pointer;
}

.c10 svg {
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c10 .copy-text {
  position: absolute;
  top: calc(50%);
  left: calc(100%);
  padding-left: 0.5em;
  color: var(--purple-medium);
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  pointer-events: none;
  white-space: nowrap;
}

.c10:hover svg {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c10:hover .copy-text {
  opacity: 1;
  pointer-events: all;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.35em;
  line-height: 1.5;
}

.c9 > a {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 > a:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 > a svg {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c9 > a svg:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  fill: var(--purple-medium);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c5 > p,
.c5 > hr {
  margin: 0.5em 0;
}

.c5 > p[role='button'] {
  margin: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1em;
  line-height: 2.5em;
  text-align: left;
  padding-left: 0em;
}

.c7 > div:first-child {
  -webkit-flex: 0 1 25%;
  -ms-flex: 0 1 25%;
  flex: 0 1 25%;
  min-width: 200px;
  text-transform: capitalize;
}

.c7 > div:last-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75em;
  word-break: break-word;
}

.c7 > div:last-child > p[role='button'] {
  margin: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
  width: 100%;
  margin: 0 auto;
  max-width: 40em;
}

.c0 form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  pointer-events: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 65%;
  -ms-flex: 0 0 65%;
  flex: 0 0 65%;
}

.c12 span.info,
.c12 span.error {
  font-size: 0.875rem;
}

.c12 span.error {
  color: var(--red-medium);
}

.c13 .toggle-wrapper {
  position: relative;
}

.c13 input {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 0;
  height: 0;
  opacity: 0;
}

.c13 .toggle {
  display: inline-block;
  position: relative;
  width: 2.25em;
  height: 1.5em;
  border-radius: 0.75em;
  border: 2px solid var(--blue-medium);
  background-color: var(--blue-medium);
  border-color: var(--gray-light) !important;
  background-color: var(--gray-light) !important;
}

.c13 .toggle::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: calc(1.5em - 4px);
  height: calc(1.5em - 4px);
  border-radius: 50%;
  background-color: var(--white);
}

.c13 input:checked ~ .toggle {
  border-color: var(--blue-dark);
  background-color: var(--blue-dark);
}

.c13 input:checked ~ .toggle::after {
  left: auto;
  right: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: var(--space-l);
}

.c6 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c6 > *:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c14 span {
  color: var(--purple-medium);
  font-size: 1.75rem;
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 c2"
    >
      <h2>
        Cancel Safe Proposal
      </h2>
      <hr />
      <p>
        Sending your transaction...
      </p>
      <span
        class="c3"
      />
    </div>
    
    <div
      class="c1 c4"
    >
      <div
        class="c5"
      >
        <header
          class="c6"
        >
          <div>
            <span>
              From
            </span>
            <span>
              t1z225 ... 6z6wgi
            </span>
          </div>
          <div>
            <span>
              Signer 
              Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
          <div>
            <span>
              Safe Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
        </header>
        <div
          class="c7"
        >
          <div>
            Proposal ID
          </div>
          <div>
            2
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Proposer
          </div>
          <div>
            <div
              class="c8"
            >
              <div
                class="c9"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1z225 ... 6z6wgi
                </a>
                <span
                  class="c10"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c11"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Approvers (1)
          </div>
          <div>
            <div
              class="c8"
            >
              <div
                class="c9"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1z225 ... 6z6wgi
                </a>
                <span
                  class="c10"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c11"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Approvals until execution
          </div>
          <div>
            1
          </div>
        </div>
        <hr />
        <div
          class="c7"
        >
          <div>
            To
          </div>
          <div>
            <div
              class="c8"
            >
              <div
                class="c9"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1mbk7 ... icb2uq
                </a>
                <span
                  class="c10"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c11"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Method
          </div>
          <div>
            Send
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Value
          </div>
          <div>
            0.4
             FIL
          </div>
        </div>
        <div
          class="c7"
        >
          <div>
            Params
          </div>
          <div>
            –
          </div>
        </div>
        <hr />
        <label
          class="c12 c13"
          disabled=""
        >
          <div>
            <span>
              Expert Mode
            </span>
            
          </div>
          <div
            class="toggle-wrapper"
          >
            <input
              disabled=""
              type="checkbox"
            />
            <span
              class="toggle"
            />
          </div>
        </label>
        <p>
          You will not pay more than 
          0.00000000001
           FIL for this transaction.
           
          <a
            href="https://filfox.info/en/stats/gas"
            rel="noreferrer noopener"
            target="_blank"
          >
            More information on average gas fee statistics.
          </a>
        </p>
        <hr />
        <div
          class="c14"
        >
          <span>
            Total
          </span>
          <span>
            0.00000000001
             FIL
          </span>
        </div>
      </div>
    </div>
    <div
      class="c15 c16"
    >
      <button
        class="c17"
        disabled=""
        type="button"
      >
        Back
      </button>
      <button
        class="c18"
        disabled=""
        type="submit"
      >
        Send
      </button>
    </div>
  </form>
</div>
`;

exports[`ApproveCancel it renders the initial approve state correctly 1`] = `
.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
}

.c13 svg path {
  stroke: var(--black);
}

.c13:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c13:hover svg path {
  stroke: var(--purple-medium);
}

.c13:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c13:active svg path {
  stroke: var(--white) !important;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c14 svg path {
  stroke: var(--black);
}

.c14:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c14:hover svg path {
  stroke: var(--purple-medium);
}

.c14:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c14:active svg path {
  stroke: var(--white) !important;
}

.c14 svg path {
  stroke: var(--white);
}

.c14:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c14:hover svg path {
  stroke: var(--green-medium);
}

.c10 {
  vertical-align: middle;
}

.c1 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c1 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c1 > h2:first-child {
  margin: 0;
}

.c1 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c2 {
  background-color: var(--blue-gray);
}

.c2 hr {
  border-color: var(--gray-medium);
}

.c3 {
  background-color: var(--white);
  box-shadow: 0 0 0.5em var(--gray-light);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  margin: 1.5em 0;
}

.c12 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c7 p {
  margin: 0;
  line-height: 1.5;
}

.c9 {
  position: relative;
  cursor: pointer;
}

.c9 svg {
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c9 .copy-text {
  position: absolute;
  top: calc(50%);
  left: calc(100%);
  padding-left: 0.5em;
  color: var(--purple-medium);
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  pointer-events: none;
  white-space: nowrap;
}

.c9:hover svg {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c9:hover .copy-text {
  opacity: 1;
  pointer-events: all;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.35em;
  line-height: 1.5;
}

.c8 > a {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 > a:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 > a svg {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c8 > a svg:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  fill: var(--purple-medium);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c4 > p,
.c4 > hr {
  margin: 0.5em 0;
}

.c4 > p[role='button'] {
  margin: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1em;
  line-height: 2.5em;
  text-align: left;
  padding-left: 0em;
}

.c6 > div:first-child {
  -webkit-flex: 0 1 25%;
  -ms-flex: 0 1 25%;
  flex: 0 1 25%;
  min-width: 200px;
  text-transform: capitalize;
}

.c6 > div:last-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75em;
  word-break: break-word;
}

.c6 > div:last-child > p[role='button'] {
  margin: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
  width: 100%;
  margin: 0 auto;
  max-width: 40em;
}

.c0 form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: var(--space-l);
}

.c5 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5 > *:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 c2"
    >
      <h2>
        Approve Safe Proposal
      </h2>
      <hr />
      <p>
        Please review the transaction to approve below
      </p>
    </div>
    
    <div
      class="c1 c3"
    >
      <div
        class="c4"
      >
        <header
          class="c5"
        >
          <div>
            <span>
              From
            </span>
            <span>
              t1z225 ... 6z6wgi
            </span>
          </div>
          <div>
            <span>
              Signer 
              Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
          <div>
            <span>
              Safe Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
        </header>
        <div
          class="c6"
        >
          <div>
            Proposal ID
          </div>
          <div>
            2
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Proposer
          </div>
          <div>
            <div
              class="c7"
            >
              <div
                class="c8"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1z225 ... 6z6wgi
                </a>
                <span
                  class="c9"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c10"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Approvers (1)
          </div>
          <div>
            <div
              class="c7"
            >
              <div
                class="c8"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1z225 ... 6z6wgi
                </a>
                <span
                  class="c9"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c10"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Approvals until execution
          </div>
          <div>
            1
          </div>
        </div>
        <hr />
        <div
          class="c6"
        >
          <div>
            To
          </div>
          <div>
            <div
              class="c7"
            >
              <div
                class="c8"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1mbk7 ... icb2uq
                </a>
                <span
                  class="c9"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c10"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Method
          </div>
          <div>
            Send
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Value
          </div>
          <div>
            0.4
             FIL
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Params
          </div>
          <div>
            –
          </div>
        </div>
      </div>
    </div>
    <div
      class="c11 c12"
    >
      <button
        class="c13"
        type="button"
      >
        Cancel
      </button>
      <button
        class="c14"
        type="submit"
      >
        Review
      </button>
    </div>
  </form>
</div>
`;

exports[`ApproveCancel it renders the initial cancel state correctly 1`] = `
.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
}

.c13 svg path {
  stroke: var(--black);
}

.c13:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c13:hover svg path {
  stroke: var(--purple-medium);
}

.c13:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c13:active svg path {
  stroke: var(--white) !important;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c14 svg path {
  stroke: var(--black);
}

.c14:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c14:hover svg path {
  stroke: var(--purple-medium);
}

.c14:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c14:active svg path {
  stroke: var(--white) !important;
}

.c14 svg path {
  stroke: var(--white);
}

.c14:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c14:hover svg path {
  stroke: var(--green-medium);
}

.c10 {
  vertical-align: middle;
}

.c1 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c1 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c1 > h2:first-child {
  margin: 0;
}

.c1 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c2 {
  background-color: var(--blue-gray);
}

.c2 hr {
  border-color: var(--gray-medium);
}

.c3 {
  background-color: var(--white);
  box-shadow: 0 0 0.5em var(--gray-light);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  margin: 1.5em 0;
}

.c12 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c7 p {
  margin: 0;
  line-height: 1.5;
}

.c9 {
  position: relative;
  cursor: pointer;
}

.c9 svg {
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c9 .copy-text {
  position: absolute;
  top: calc(50%);
  left: calc(100%);
  padding-left: 0.5em;
  color: var(--purple-medium);
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  pointer-events: none;
  white-space: nowrap;
}

.c9:hover svg {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c9:hover .copy-text {
  opacity: 1;
  pointer-events: all;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.35em;
  line-height: 1.5;
}

.c8 > a {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 > a:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 > a svg {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c8 > a svg:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  fill: var(--purple-medium);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c4 > p,
.c4 > hr {
  margin: 0.5em 0;
}

.c4 > p[role='button'] {
  margin: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1em;
  line-height: 2.5em;
  text-align: left;
  padding-left: 0em;
}

.c6 > div:first-child {
  -webkit-flex: 0 1 25%;
  -ms-flex: 0 1 25%;
  flex: 0 1 25%;
  min-width: 200px;
  text-transform: capitalize;
}

.c6 > div:last-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75em;
  word-break: break-word;
}

.c6 > div:last-child > p[role='button'] {
  margin: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
  width: 100%;
  margin: 0 auto;
  max-width: 40em;
}

.c0 form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: var(--space-l);
}

.c5 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5 > *:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 c2"
    >
      <h2>
        Cancel Safe Proposal
      </h2>
      <hr />
      <p>
        Please review the transaction to approve below
      </p>
    </div>
    
    <div
      class="c1 c3"
    >
      <div
        class="c4"
      >
        <header
          class="c5"
        >
          <div>
            <span>
              From
            </span>
            <span>
              t1z225 ... 6z6wgi
            </span>
          </div>
          <div>
            <span>
              Signer 
              Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
          <div>
            <span>
              Safe Balance
            </span>
            <span>
              1
               FIL
            </span>
          </div>
        </header>
        <div
          class="c6"
        >
          <div>
            Proposal ID
          </div>
          <div>
            2
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Proposer
          </div>
          <div>
            <div
              class="c7"
            >
              <div
                class="c8"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1z225 ... 6z6wgi
                </a>
                <span
                  class="c9"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c10"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Approvers (1)
          </div>
          <div>
            <div
              class="c7"
            >
              <div
                class="c8"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1z225 ... 6z6wgi
                </a>
                <span
                  class="c9"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c10"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Approvals until execution
          </div>
          <div>
            1
          </div>
        </div>
        <hr />
        <div
          class="c6"
        >
          <div>
            To
          </div>
          <div>
            <div
              class="c7"
            >
              <div
                class="c8"
                color="var(--purple-medium)"
              >
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  t1mbk7 ... icb2uq
                </a>
                <span
                  class="c9"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class="c10"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Method
          </div>
          <div>
            Send
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Value
          </div>
          <div>
            0.4
             FIL
          </div>
        </div>
        <div
          class="c6"
        >
          <div>
            Params
          </div>
          <div>
            –
          </div>
        </div>
      </div>
    </div>
    <div
      class="c11 c12"
    >
      <button
        class="c13"
        type="button"
      >
        Cancel
      </button>
      <button
        class="c14"
        type="submit"
      >
        Review
      </button>
    </div>
  </form>
</div>
`;
